# fractured-ray

./: .editorconfig  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
examples/: cornell_box.rs  diamond.rs
src/: lib.rs  main.rs
src/domain/: mod.rs  scalar.rs
src/domain/camera/: camera.rs  mod.rs  resolution.rs  viewport.rs
src/domain/color/: color.rs  external_color.rs  mod.rs
src/domain/entity/: bvh.rs  entity.rs  mod.rs  scene.rs
src/domain/entity/material/: diffuse.rs  emissive.rs  material.rs  mod.rs  refractive.rs  specular.rs
src/domain/entity/shape/: bbox.rs  instance.rs  mesh.rs  mod.rs  plane.rs  polygon.rs  shape.rs  sphere.rs  triangle.rs
src/domain/geometry/: mod.rs  point.rs  product.rs  quaternion.rs  transformation.rs  unit_vector.rs  value.rs  vector.rs
src/domain/image/: image.rs
src/domain/material/: mod.rs
src/domain/material/def/: ext.rs  material.rs  mod.rs
src/domain/material/primitive/: diffuse.rs  emissive.rs  glossy.rs  mod.rs  refractive.rs  scattering.rs  specular.rs
src/domain/math/: mod.rs
src/domain/math/algebra/: mod.rs  product.rs  quaternion.rs  unit_vector.rs  vector.rs
src/domain/math/geometry/: mod.rs  point.rs  transformation.rs
src/domain/math/numeric/: mod.rs  range.rs  value.rs
src/domain/ray/: intersection.rs  mod.rs  ray.rs  ray_trace.rs
src/domain/ray/photon/: map.rs  mod.rs  photon.rs
src/domain/renderer/: context.rs  mod.rs  renderer.rs  state.rs
src/domain/sampling/: def.rs  mod.rs
src/domain/shape/: mod.rs
src/infrastructure/image/: mod.rs  png_writer.rs  ppm_writer.rs
(+42 files in other folders)
