[package]
name = "fractured-ray"
version = "0.1.0"
edition = "2024"
authors = ["Justin Chen oosquare@outlook.com"]
description = "Minimal Raytracing Implementation"

[dependencies]
indicatif = "0.18.0"
mockall = "0.13.1"
png = "0.17.16"
rand = "0.9.1"
rand_distr = "0.5.1"
rayon = "1.10.0"
smallvec = "1.15.1"
snafu = "0.8.6"
spade = "2.14.0"
